--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   <section id="contact" class="contact fade-in">
     <div class="container">
       <h2>Contact Me</h2>
-      <p>Email:sathwikaare.com</p>
+      <p>Email:sathwikaaare@.com</p>
     </div>
   </section>
 
