--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
   <!-- 🔗 Navbar -->
   <header>
     <div class="container">
-      <h1>sathwika Aare</h1>
+      <h1>Sathwika Aare</h1>
       <nav>
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
@@ -26,11 +26,11 @@
     <div class="container">
       <h2>About Me</h2>
       <p>
-        Hello! I'm <strong>sathwika Aare</strong>, a passionate <strong>Frontend Developer</strong> with a love for crafting responsive and accessible web applications.
+        Hello! I'm <strong>Sathwika Aare</strong>, a passionate <strong>Frontend Developer</strong> with a love for crafting responsive and accessible web applications.
         I specialize in <strong>React, JavaScript, and CSS</strong> and enjoy solving UI/UX challenges with clean code and creative ideas.
       </p>
       <p>
-        I’ve built <strong>15+ web projects</strong>, ranging from personal portfolios to dynamic web apps. My mission is to build things that make people’s lives easier — and look great while doing it.
+        I’ve built <strong> web projects</strong>, ranging from personal portfolios to dynamic web apps. My mission is to build things that make people’s lives easier — and look great while doing it.
       </p>
       <p>
         When I’m not coding, I’m probably sketching, traveling, or sipping coffee while binge-watching tech YouTube.
@@ -41,7 +41,7 @@
   <!-- Footer -->
   <footer>
     <div class="container">
-      <p>&copy; sathwika Aare</p>
+      <p>&copy; Sathwika Aare</p>
     </div>
   </footer>
 
