--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
       <h2>About Me</h2>
       <p>
         Hello! I'm <strong>Sathwika Aare</strong>, a passionate <strong>Frontend Developer</strong> with a love for crafting responsive and accessible web applications.
-        I specialize in <strong>React, JavaScript, and CSS</strong> and enjoy solving UI/UX challenges with clean code and creative ideas.
+        I specialize in <strong>HTML, JavaScript, and CSS</strong> and enjoy solving UI/UX challenges with clean code and creative ideas.
       </p>
       <p>
         I’ve built <strong> web projects</strong>, ranging from personal portfolios to dynamic web apps. My mission is to build things that make people’s lives easier — and look great while doing it.
