--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>sathwika Aare | Portfolio</title>
+  <title>Sathwika Aare | Portfolio</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
   <header>
     <div class="container">
-      <h1>sathwika Aare</h1>
+      <h1>Sathwika Aare</h1>
       <nav>
         <a href="about.html">About</a>
         <a href="projects.html">Projects</a>
@@ -21,7 +21,7 @@
 
   <section class="hero fade-in">
     <div class="container">
-      <h2>Hi, I'm sathwika 👋</h2>
+      <h2>Hi, I'm Sathwika Aare 👋</h2>
       <p>Frontend Developer | Designer | Problem Solver</p>
     </div>
   </section>
@@ -42,8 +42,8 @@
           <p>Responsive personal portfolio built with HTML, CSS, and JavaScript.</p>
         </div>
         <div class="project-card">
-          <h3>Weather App</h3>
-          <p>Real-time weather updates using OpenWeatherMap API.</p>
+          <h3>Arduino Based Solar Traking</h3>
+          <p>solar panel moves according to the sunlight</p>
         </div>
       </div>
     </div>
@@ -58,7 +58,7 @@
 
   <footer>
     <div class="container">
-      <p>&copy; 2025 sathwika Aare</p>
+      <p>&copy; 2025 Sathwika Aare</p>
     </div>
   </footer>
 
