--- a/about.html
+++ b/about.html
@@ -25,6 +25,7 @@
   <section id="about" class="about fade-in">
     <div class="container">
       <h2>About Me</h2>
+      <img src= "portprofile.jpg" width="300px" height="300px" class="round-image
       <p>
         Hello! I'm <strong>Sathwika Aare</strong>, a passionate <strong>Frontend Developer</strong> with a love for crafting responsive and accessible web applications.
         I specialize in <strong>HTML, JavaScript, and CSS</strong> and enjoy solving UI/UX challenges with clean code and creative ideas.
