--- a/about.html
+++ b/about.html
@@ -19,6 +19,18 @@
         <a href="index.html#contact">Contact</a>
       </nav>
     </div>
+    <style>
+    .round-image {
+      width: 300px; 
+      height: 300px; 
+      border-radius: 50%; 
+      object-fit: cover; 
+      border: 3px solid #555; 
+    }
+  </style>
+
+
+
   </header>
 
   <!-- 👤 About Section -->
