--- a/about.html
+++ b/about.html
@@ -1,10 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
+
+  <style>
+#about{
+  text-align: center;
+}
+    /* About Image Styling */
+.about-image {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.about-image img {
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+  object-fit: cover;
+  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s ease;
+}
+
+.about-image img:hover {
+  transform: scale(1.05);
+}
+
+
+  </style>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>About | sathwika Aare</title>
-  <link rel="stylesheet" href="style.css" />
+  <title>About | Sathwika Aare</title>
+  <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
 
@@ -19,20 +46,23 @@
         <a href="index.html#contact">Contact</a>
       </nav>
     </div>
-    
-</header>
+  </header>
 
   <!-- 👤 About Section -->
   <section id="about" class="about fade-in">
     <div class="container">
       <h2>About Me</h2>
-      <img src= "portprofile.jpg" width="300px" height="300px" class="round-image
+
+      <!-- 👤 Profile Image -->
+      <div class="about-image">
+        <img src="portprofile - Copy.jpg" alt="Sathwika Aare">
+      </div>
+
       <p>
-        Hello! I'm <strong>Sathwika Aare</strong>, a passionate <strong>Frontend Developer</strong> with a love for crafting responsive and accessible web applications.
-        I specialize in <strong>HTML, JavaScript, and CSS</strong> and enjoy solving UI/UX challenges with clean code and creative ideas.
+        Hello! I'm <strong>Sathwika Aare</strong>, I specialize in <strong>HTML, JavaScript, CSS , python and sql</strong>  with clean code and creative ideas.
       </p>
       <p>
-        I’ve built <strong> web projects</strong>, ranging from personal portfolios to dynamic web apps. My mission is to build things that make people’s lives easier — and look great while doing it.
+        I am currently pursuing an internship at Apexon. My mission is to build things that make people’s lives easier — and look great while doing it.
       </p>
       <p>
         When I’m not coding, I’m probably sketching, traveling, or sipping coffee while binge-watching tech YouTube.
