--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Contact | Sathwika Aare</title>
+  <title>Contact | sathwika Aare</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -11,7 +11,7 @@
   <!-- 🔗 Navbar -->
   <header>
     <div class="container">
-      <h1>Sathwika Aare</h1>
+      <h1>sathwika Aare</h1>
       <nav>
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
@@ -25,14 +25,20 @@
   <section id="contact" class="contact fade-in">
     <div class="container">
       <h2>Contact Me</h2>
-      <p>I'm always open to discussing new projects or collaboration opportunities. Feel free to reach out!</p>
+      <p>Interested in collaborating? Let’s create something amazing together! Drop me a message, and let’s talk." </p>
 
       <!-- Simple Contact Info -->
       <p>Email: <a href="mailto:sathwikaaare@gmail.com">sathwikaaare@gmail.com</a></p>
-      <p>LinkedIn: <a href="https://www.linkedin.com/in/sathwika-aare-61914b2a9" target="_blank">linkedin.com/in/Sathwika Aare</a></p>
-      <p>GitHub: <a href="https://github.com/sathwika605" target="_blank">github.com/sathwika605</a></p>
+      <p><a href="https://github.com/sathwika605" target="_blank">
+        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
+            <path d="M12 .297c-6.63 0-12 5.373-12 12 0 5.304 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577v-2.01c-3.338.724-4.042-1.415-4.042-1.415-.546-1.387-1.333-1.756-1.333-1.756-1.09-.744.083-.729.083-.729 1.205.084 1.838 1.237 1.838 1.237 1.07 1.834 2.807 1.305 3.492.998.108-.774.418-1.305.762-1.604-2.665-.3-5.466-1.332-5.466-5.93 0-1.31.469-2.38 1.235-3.22-.123-.303-.535-1.523.117-3.176 0 0 1.007-.322 3.3 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.292-1.552 3.297-1.23 3.297-1.23.653 1.653.241 2.873.118 3.176.768.84 1.232 1.91 1.232 3.22 0 4.61-2.807 5.625-5.478 5.921.429.372.824 1.102.824 2.222v3.293c0 .322.217.694.824.576C20.565 22.092 24 17.593 24 12.297c0-6.627-5.373-12-12-12"/>
+        </svg>
+    </a>
+  
+    <a href="https://www.linkedin.com/in/sathwika-aare" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
+        <path d="M22.23 0H1.77A1.76 1.76 0 000 1.75v20.5A1.76 1.76 0 001.77 24h20.45A1.76 1.76 0 0024 22.25V1.75A1.76 1.76 0 0022.23 0zM7.13 20.45H3.56V9H7.13zM5.34 7.49a2.06 2.06 0 112.06-2.06 2.06 2.06 0 01-2.06 2.06zM20.45 20.45h-3.57v-5.57c0-1.33-.02-3.05-1.86-3.05-1.85 0-2.13 1.45-2.13 2.96v5.66h-3.57V9h3.43v1.56h.05a3.76 3.76 0 013.38-1.86c3.61 0 4.28 2.38 4.28 5.46z"/>
+    </svg>
 
-      <!-- OR: Add a basic contact form -->
       <!--
       <form action="mailto:johndoe@example.com" method="post" enctype="text/plain">
         <input type="text" name="name" placeholder="Your Name" required>
@@ -47,7 +53,7 @@
   <!-- Footer -->
   <footer>
     <div class="container">
-      <p>&copy; 2025 Sathwika Aare</p>
+      <p>&copy; 2025 sathwika Aare</p>
     </div>
   </footer>
 
