--- a/index.html
+++ b/index.html
@@ -42,8 +42,9 @@
           <p>Responsive personal portfolio built with HTML, CSS, and JavaScript.</p>
         </div>
         <div class="project-card">
-          <h3>Arduino Based Solar Traking</h3>
-          <p>solar panel moves according to the sunlight</p>
+          <h3>Arduino Based Solar Tracking System</h3>
+          <p>Designed an Arduino-based solartracking system that utilizes light-dependent resistors(LDRs) 
+            and servo motors to automatically adjust the angle of solar panels for maximum energy harvesting.</p>
         </div>
       </div>
     </div>
