--- a/projects.html
+++ b/projects.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Projects | Sathwika Aare</title>
+  <title>Projects | sathwika Aare</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -11,7 +11,7 @@
   <!-- 🔗 Navbar -->
   <header>
     <div class="container">
-      <h1>Sathwika Aare</h1>
+      <h1>sathwika Aare</h1>
       <nav>
         <a href="index.html">Home</a>
         <a href="about.html">About</a>
@@ -35,29 +35,21 @@
         </div>
 
         <div class="project-card">
-          <h3>Weather App</h3>
-          <p>A weather dashboard using OpenWeatherMap API, built with JavaScript and styled using CSS Grid.</p>
+          <h3>Arduino Based Solar Tracking System</h3>
+          <p>Designed an Arduino-based solartracking system that utilizes light-dependent resistors(LDRs) 
+            and servo motors to automatically adjust the angle of solar panels for maximum energy harvesting.</p>
           <a href="https://your-weatherapp-link.com" target="_blank">View Live</a> |
           <a href="https://github.com/sathwika605/weather-app" target="_blank">GitHub</a>
         </div>
 
-        <div class="project-card">
-          <h3>To-Do List</h3>
-          <p>A task management app with add/remove/edit functionality, built using vanilla JS and localStorage.</p>
-          <a href="https://your-todo-link.com" target="_blank">View Live</a> |
-          <a href="https://github.com/sathwika605/todo-app" target="_blank">GitHub</a>
-        </div>
-
         <!-- Add more projects as needed -->
-        
-      </div>
-    </div>
+      
   </section>
 
   <!-- Footer -->
   <footer>
     <div class="container">
-      <p>&copy; 2025 Sathwika Aare</p>
+      <p>&copy; 2025 sathwika Aare</p>
     </div>
   </footer>
 
