--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   <section id="contact" class="contact fade-in">
     <div class="container">
       <h2>Contact Me</h2>
-      <p>Email:sathwikaaare@.com</p>
+      <p>Email:sathwikaaare@gmail.com</p>
     </div>
   </section>
 
