Update sathwika Aare _ Portfolio.html

--- a/sathwika Aare _ Portfolio.html
+++ b/sathwika Aare _ Portfolio.html
@@ -29,7 +29,11 @@
   <section id="about" class="about fade-in">
     <div class="container">
       <h2>About Me</h2>
-      <p>I build beautiful and functional web experiences. I love clean code and intuitive UI/UX.</p>
+      <p>I’m currently sharpening my skills through an internship at Apexon.
+
+My mission? To build things that make life easier — and look good doing it.
+
+</p>
     </div>
   </section>
 
